firmware/kube/kube-resolver.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zpowermon
  namespace: logs
  labels:
    app: zpowermon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zpowermon
  template:
    metadata:
      labels:
        app: zpowermon
    spec:
      containers:
      - name: zpowermon
        image: jdevelop/zpowermon:latest
