firmware/kube/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: zpowermon-service
  namespace: logs
  labels:
    app: zpowermon
spec:
  type: NodePort
  selector:
    app: zpowermon
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
